# libaflgo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SVF-1282.patch  rust-toolchain.toml  svf.patch
.devcontainer/: Dockerfile  devcontainer.json
fuzzer/: CMakeLists.txt  Cargo.toml
fuzzer/src/: lib.rs
fuzzers/: CMakeLists.txt
fuzzers/aflgo/: CMakeLists.txt  Cargo.toml
fuzzers/aflgo/src/: lib.rs
fuzzers/dafl/: CMakeLists.txt  Cargo.toml
fuzzers/dafl/src/: lib.rs
fuzzers/hawkeye/: CMakeLists.txt  Cargo.toml
fuzzers/hawkeye/src/: lib.rs
include/AFLGoCompiler/: TargetInjection.hpp
include/AFLGoLinker/: DAFL.hpp  DistanceInstrumentation.hpp  DuplicateTargetRemoval.hpp  FunctionDistanceInstrumentation.hpp  TargetInjectionFixup.hpp
include/Analysis/: BasicBlockDistance.hpp  DAFL.hpp  ExtendedCallGraph.hpp  FunctionDistance.hpp  TargetDefinition.hpp  TargetDetection.hpp
libaflgo/: Cargo.toml
libaflgo/src/: dafl.rs  lib.rs
libaflgo_targets/: Cargo.toml
libaflgo_targets/src/: dafl.rs  distance.rs  fun_distance.rs  lib.rs  similarity.rs  target.rs
passes/: CMakeLists.txt
passes/AFLGo/: AFLGo.cpp  CMakeLists.txt
passes/AFLGoCompiler/: CMakeLists.txt  Plugin.cpp  TargetInjection.cpp
passes/AFLGoLinker/: CMakeLists.txt  DAFL.cpp  DistanceInstrumentation.cpp  DuplicateTargetRemoval.cpp  FunctionDistanceInstrumentation.cpp  Plugin.cpp  TargetInjectionFixup.cpp
passes/Analysis/: BasicBlockDistance.cpp  CMakeLists.txt  DAFL.cpp  ExtendedCallGraphAnalysis.cpp  FunctionDistance.cpp  TargetDefinition.cpp  TargetDetection.cpp
passes/AnalysisPrinter/: AnalysisPrinter.cpp  CMakeLists.txt
rtlib/: Cargo.toml
test/: CMakeLists.txt  aflgo-instrumentation.ll  bb-distance.ll  distance-instrumentation.ll  duplicate-targets.ll  function-distance-instrumentation.ll  function-distance.ll  harness-dry-run.c  harness-hawkeye-asan.cpp  harness-hawkeye-run.c  harness-hawkeye.c  harness-min-max.c  harness-multi.c  harness-opt.c  harness-run.c  harness.c  harness.cpp  hawkeye-function-distance.ll  indirect-multi.ll  lit.cfg.in  multi-function-distance.ll  target-definition.ll  target-detection.ll  target-ids.ll  target-injection.ll
wrapper/: CMakeLists.txt  libaflgo_cc.in
wrapper/libafl_cc_libs/: Cargo.toml
wrapper/libafl_cc_libs/src/: main.rs
