[workspace]
members = [
    "libaflgo_targets",
    "libaflgo",
    "wrapper/libafl_cc_libs",
    "fuzzers/aflgo",
    "fuzzers/hawkeye",
    "fuzzers/dafl",
]
default-members = ["libaflgo_targets", "libaflgo"]
package.rust-version = "1.88"
resolver = "3"

[workspace.dependencies]
# LibAFL version 0.10.1
libafl = { git = "ssh://git@github.com/vusec/LibAFL-directed.git" }
libafl_cc = { git = "ssh://git@github.com/vusec/LibAFL-directed.git" }
libafl_targets = { git = "ssh://git@github.com/vusec/LibAFL-directed.git" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
