[package]
name = "fuzzer_aflgo"
version = "0.1.0"
authors = ["Elia Geretto <e.geretto@vu.nl"]
edition = "2021"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", features = [
	"sancov_pcguard_hitcounts",
	"sancov_cmplog",
	"libfuzzer",
] }
libaflgo = { path = "../libaflgo" }
mimalloc = "0.1.36"
nix = "0.26.2"

[lib]
crate-type = ["staticlib"]
